--- a/public/css/register.css
+++ b/public/css/register.css
@@ -76,7 +76,7 @@
     flex-direction: column;
     margin-bottom: 15px;
 }
-.errores, .erroresName, .erroresLastName{
+.errores, .erroresName, .erroresLastName, .erroresEmail , .erroresPassword{
     margin-top: -10px;
     margin-left: 10px;
     margin-bottom: 10px;
