--- a/public/css/productEdit.css
+++ b/public/css/productEdit.css
@@ -125,3 +125,12 @@
     margin-bottom: 20px;
     margin-top: 20px;
 }
+/*validaciones front */
+.erroresName, .erroresDescription, .erroresImage,.erroresPrice, .erroresStock{
+    color: red;
+    font-size: 12px;
+    margin-top: -6px;
+    margin-bottom: 10px;
+    margin-left: 21px;
+    width: 100%
+}
