--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -18,15 +18,15 @@
             <p class="main__login--titulares">Iniciar sesión</p>
             
             <p class="main__input--desc">Correo electrónico</p>
-            <input class="main__form--inputs" type="text" name="userEmail" value="<%= locals.old && old.userEmail %>" placeholder="Email de Usuari@">
+            <input class="main__form--inputs" type="email" name="userEmail" value="<%= locals.old && old.userEmail %>" placeholder="Email de Usuari@">
             <% if (locals.errors && errors.userEmail) { %>
-                <p class= "input--error"><%= errors.userEmail.msg %></p>
+                <li class= "input--error"><%= errors.userEmail.msg %></li>
             <% } %>
            
             <p class="main__input--desc">Contraseña</p>
             <input class="main__form--inputs" type="password" name="passwordUser" value="" placeholder="Contraseña">
             <% if (locals.errors && errors.passwordUser) { %>
-                <p class= "input--error"><%= errors.passwordUser.msg %></p>
+                <li class= "input--error"><%= errors.passwordUser.msg %></li>
             <% } %>
 
             <input class="main__input--desc" type="checkbox" name="rememberUsers">Recordar sesión
