--- a/src/views/partials/headerReduce.ejs
+++ b/src/views/partials/headerReduce.ejs
@@ -1,3 +1,9 @@
 <header class="header--main">
-    <a href="/"><img  class="header--logo" src="/images/logo.svg" alt="Mates"></a>
+    <div class="header__main--bar">
+        <div class="header__div--logo">
+            <a href="/"><img  class="header--logo" src="/images/logo.svg" alt="Mates"></a>
+        </div>
+    </div>  
 </header>
+
+  
