--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -64,11 +64,10 @@
                         mainItemDiv.remove();
                     }
                 </script>
-
+                
                 <div class="main__continuar">
-                    <button class="main__continuar--button">Continuar Compra</button>
+                    <a class="main__continuar--button" href="/">Continuar Compra</a>
                 </div>
-            </div>
         </section>
 
     </main>
