--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,7 @@
 /* Index */
 .main--home {
     font-family: "Poppins", sans-serif;
-    margin: 0 3px 0 3px;
+    margin: 0;
     box-shadow:
         inset 0 -10px 40px 21px rgb(255,255,255),
         inset 0 6px 9px 0px rgb(100, 100, 100, 0.6);
