--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -66,21 +66,26 @@
 }
 
 .main__continuar {
+  display:flex;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  font-family: "Poppins", sans-serif;
-  font-size: 20px;
+  max-width: 300px;
+  color: black;
+  font-size: 16px;
+  border-radius: 4px;
+  padding-left: 21px;
+ 
 }
 
 .main__continuar--button {
-  width: 40%;
+  width: 100%;
   background: #344C2A;
+  text-decoration: none;
   border-radius: 10px; 
   font-family: "Poppins", sans-serif;
-  padding: 10px;
+  padding: 12px;
   color: white;
+  text-align: center;
+  list-style: none;
 }
 
 @media (min-width:1200px) {
