--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,14 +8,14 @@
 <body>
     <%- include('./partials/header.ejs') %>
    
-    <main class="main--home">
+    <main class="main--home"  id="main">
         
         <div class="banner--slides">
             <img class="banner--slide" id="slider0" src="/images/slides/slide1.jpg">
         </div>
         
         <section class="main--section">
-            <h3 class="main--titulares">Categorías</h3>
+            <h3 class="main--titulares">Productos Destacados</h3>
             <div class="main__section--div4">
                 <div class="main__section--div2">
                     <article class="main__secction--article">
@@ -70,9 +70,6 @@
                 </div>
         </section>
 
-        <div class="main--section">
-            <h3 class="main--titulares">Promociones</h3>
-        </div>
         <div class="banner--slides">
             <img class="banner--slide" id="slider1" src="/images/slides/slide3.jpg">
         </div>
@@ -144,7 +141,7 @@
     </main>
     
     <%- include('./partials/footer.ejs') %>
-
+   
     <script src="scripts/bannerHome.js"></script>
     <script src="scripts/bannerHome.js"></script>
 </body>
