--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,10 +1,9 @@
-<header class="header--main">
+<header class="header--main" id="header">
         
     <div class="header__main--bar">
         <div class="header__div--burger">
-            <a href="#"><i class="fa-solid fa-bars" style="font-size: 130%;"></i></a>
+            <a href="#" id="abrir" ><i class="fa-solid fa-bars" ></i></a>
         </div>
-
         <div class="header__div--logo">
             <a href="/"><img  class="header--logo" src="/images/logo.svg" alt="Mates"></a>
         </div>
@@ -13,14 +12,17 @@
         </div>
     </div>
             
-    <nav class="header__nav--menu">
-        <ul class="header__nav--option">
-            <li type="none"> <a href="/products/index"> Productos</a> </li>
-            <li type="none"> <a href="#"> Vender</a> </li>
-            <li type="none"> <a href="#"> Ofertas</a> </li>
-            <li type="none"> <a href="#"> Contacto</a> </li>
-        </ul>
-        
+    <nav class="header__nav--menu"> 
+        <nav class="nav--option" id="nav">
+            <button href="" class="close--burger" id="cerrar"><i class="fa-solid fa-x"></i></button>  
+            <ul class="header__nav--option">
+                <li type="none"> <a href="/"> Inicio</a> </li>
+                <li type="none"> <a href="/products/index"> Productos</a> </li>
+                <li type="none"> <a href="#"> Categorías</a> </li>
+                <li type="none"> <a href="#"> Ofertas</a> </li>
+            </ul> 
+        </nav>
+    <nav class="nav--login">        
         <ul class="header__nav--login">
             <% if (!locals.usuario) { %>
                 <li type="none"> <a href="/users/register"> Creá tu cuenta&ensp;<i class="fa-solid fa-address-card"></i></a></li>
@@ -38,6 +40,8 @@
             <% } %>
             <li type="none"> <a href="/products/productCart"> <i style="margin: 0 auto; font-size: 120%;" class="fa-solid fa-shopping-cart"></i> </a> </li> 
         </ul>
-        
-    </nav>                 
+    </nav> 
+    <script src="/scripts/burgerMenu.js"></script> 
+    </nav>
+    
 </header>
