--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -11,37 +11,38 @@
             <a href="/products/productCart"><i class="fa-solid fa-shopping-cart" style="font-size: 130%;"></i></a>
         </div>
     </div>
-            
-    <nav class="header__nav--menu"> 
-        <nav class="nav--option" id="nav">
+          
+    <nav class="header__nav--menu" id="nav"> 
+        <nav class="nav--option" >
             <button href="" class="close--burger" id="cerrar"><i class="fa-solid fa-x"></i></button>  
             <ul class="header__nav--option">
                 <li type="none"> <a href="/"> Inicio</a> </li>
                 <li type="none"> <a href="/products/index"> Productos</a> </li>
                 <li type="none"> <a href="#"> Categorías</a> </li>
                 <li type="none"> <a href="#"> Ofertas</a> </li>
+                <li type="none" class="visibleline">-------------------</a> </li>
             </ul> 
         </nav>
-    <nav class="nav--login">        
-        <ul class="header__nav--login">
-            <% if (!locals.usuario) { %>
-                <li type="none"> <a href="/users/register"> Creá tu cuenta&ensp;<i class="fa-solid fa-address-card"></i></a></li>
-                <li type="none"> <a href="/users/login"> Ingresá&ensp; <i class="fa-solid fa-right-to-bracket"></i> </a> </li>
-            <% } %>
-            <% if (locals.usuario) { %>
-                <figure class="figure--avatar">
-                    <a href="/"><img  class="header--avatar" src="/images/avatars/<%= usuario.image %>" alt="Mates"></a>
-                    <p class="header--users header--avatar"><%= usuario.name %></p>
-                </figure>
-                <li type="none"> <a href="/users/logout"> Cerrar sesión&ensp; <i class="fas fa-sign-out-alt"></i> </a> </li>
-            <% } %>
-            <% if (locals.usuario && locals.isAdmin) { %>
-                <li type="none"> <a href="/admin"> Admin&ensp; <i class="fa-solid fa-toolbox"></i> </a> </li>
-            <% } %>
-            <li type="none"> <a href="/products/productCart"> <i style="margin: 0 auto; font-size: 120%;" class="fa-solid fa-shopping-cart"></i> </a> </li> 
-        </ul>
-    </nav> 
-    <script src="/scripts/burgerMenu.js"></script> 
+
+        <nav class="nav--login">        
+            <ul class="header__nav--login">
+                <% if (!locals.usuario) { %>
+                    <li type="none"> <a href="/users/login"> Iniciar sesión&ensp; <i class="fa-solid fa-right-to-bracket"></i> </a> </li>
+                    <li type="none"> <a href="/users/register"> Crear cuenta&ensp;<i class="fa-solid fa-address-card"></i></a></li>                    
+                <% } %>
+                <% if (locals.usuario) { %>
+                    <figure class="figure--avatar">
+                        <a href="/"><img  class="header--avatar" src="/images/avatars/<%= usuario.image %>" alt="Mates"></a>
+                        <p class="header--users header--avatar"><%= usuario.name %></p>
+                    </figure>
+                    <li type="none"> <a href="/users/logout"> Cerrar sesión&ensp; <i class="fas fa-sign-out-alt"></i> </a> </li>
+                <% } %>
+                <% if (locals.usuario && locals.isAdmin) { %>
+                    <li type="none"> <a href="/admin"> Admin&ensp; <i class="fa-solid fa-toolbox"></i> </a> </li>
+                <% } %> 
+                <li type="none"> <a href="/products/productCart"> <i style="margin: 0 auto; font-size: 120%;" class="fa-solid fa-shopping-cart visibleCart"></i> </a> </li> 
+            </ul>
+        </nav> 
     </nav>
-    
+    <script src="/scripts/burgerMenu.js"></script> 
 </header>
