--- a/public/css/index.css
+++ b/public/css/index.css
@@ -70,7 +70,7 @@
 .main__section--div2 {
     display:flex;
     justify-content: center;
-    align-items: stretch;
+    align-items: stretch; 
 }
 .main__secction--article{
     align-self: stretch;
@@ -118,21 +118,46 @@
     margin: 0;
     border-bottom: solid 1px #ebebeb;
 }
-.main__article--img {
-    width: 100%;
-    padding: 0;
-    margin: 0 auto;
+.main__secction--container {
+    display: grid;
+    
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    justify-items: center;
 }
+.product-box_image {
+    display:flex;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.main__figure--img {
+    display:flex;
+    width: 100%;
+    height: auto; /* Mantiene la proporción de la imagen */
+    object-fit: cover; /* La imagen cubrirá el área del contenedor */
+    max-width: 300px; /* Ancho máximo para imágenes */
+    max-height: 300px; /* Altura máxima para imágenes */
+}
+.main__article--img {
+    display:flex;
+    width: 100%;
+    height: auto; /* Mantiene la proporción de la imagen */
+    object-fit: cover; /* La imagen cubrirá el área del contenedor */
+    max-width: 300px; /* Ancho máximo para imágenes */
+    max-height: 300px; /* Altura máxima para imágenes */
+}
+
 .section__article--precio {
     font-size: 19px;
     padding: 0 0 0 15px;
     margin: 0 0 15px 0;
 }
 .section__article--descripcion {
-    font-size: 16px;
+    font-size: 15px;
     font-weight: bold;
     color:#666;
-    padding: 0 0 10px 10px;
+    padding: 0 10px 10px 10px;
     margin: 0;  
 }
 
