--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,59 +16,29 @@
         
         <section class="main--section">
             <h3 class="main--titulares">Productos Destacados</h3>
-            <div class="main__section--div4">
-                <div class="main__section--div2">
-                    <article class="main__secction--article">
-                        <a style="text-decoration: none;" href="/products/productDetail/1">
-                        <div class="section__article--img">
-                            <img class="main__article--img" src="/images/el-mateador-imagenes-04.jpg" alt="Programacion Full Stack">
-                        </div>                        
-                        <div class="article__div--flex">
-                            <p class="section__article--precio"> Mates</p>
-                            <p class="section__article--descripcion"> Descripcion </p> 
-                        </div> 
-                        </a>                       
-                    </article>
-
-                    <article class="main__secction--article">
-                        <a style="text-decoration: none;" href="/products/productDetail/2">
-                        <div class="section__article--img">
-                            <img class="main__article--img" src="/images/el-mateador-imagenes-06.jpg" alt="Programacion Full Stack">
-                        </div>                        
-                        <div class="article__div--flex">
-                            <p class="section__article--precio"> Bombillas</p>
-                            <p class="section__article--descripcion"> Descripcion </p> 
-                        </div> 
-                        </a>                       
-                    </article>
-                </div>
-
-                <div class="main__section--div2">
-                    <article class="main__secction--article">
-                        <a style="text-decoration: none;" href="/products/productDetail/3">
-                        <div class="section__article--img">
-                            <img class="main__article--img" src="/images/el-mateador-imagenes-09.jpg" alt="Programacion Full Stack">
-                        </div>                        
-                        <div class="article__div--flex">
-                            <p class="section__article--precio"> Mates</p>
-                            <p class="section__article--descripcion"> Descripcion </p> 
-                        </div> 
-                        </a>                       
-                    </article>
-                    
-                    <article class="main__secction--article">
-                        <a style="text-decoration: none;" href="/products/productDetail/4">
-                        <div class="section__article--img">
-                            <img class="main__article--img" src="/images/el-mateador-imagenes-07.jpg" alt="Programacion Full Stack">
-                        </div>                        
-                        <div class="article__div--flex">
-                            <p class="section__article--precio"> Bombillas</p>
-                            <p class="section__article--descripcion"> Descripcion </p> 
-                        </div>  
-                        </a>                      
-                    </article>
-                </div>
-        </section>
+           
+            <div class="main__secction--container">
+                <!-- Ordenar aleatoriamente los productos -->
+                <%productos.sort(() => 0.5 - Math.random());
+                // Seleccionar los primeros 4 productos
+                const productosAleatorios = productos.slice(0, 4);
+                %>
+                
+                <% productosAleatorios.forEach ((product)=>{ %>
+                    <section class="main__secction--article">
+                        <a class="product--href" style="text-decoration: none;" href="/products/productDetail/<%=product.id%>">
+                            <% for( let i = 0; i < 1; i++ ) { %>
+                                <img class="main__figure--img" id="images" name="images" src="/images/<%= product.producto[i].name %>" alt="<%=product.producto[i].name%>">
+                            <% } %>
+                            <div class="article__div--flex">
+                                <p class="section__article--precio">$<%=product.price %>.-</p>
+                                <p class="section__article--descripcion"> <%=product.name %> </p>
+                            </div>
+                        </a>
+                    </section>
+                <% }) %>
+            </div>
+        </section>    
 
         <div class="banner--slides">
             <img class="banner--slide" id="slider1" src="/images/slides/slide3.jpg">
@@ -125,16 +95,16 @@
         <section class="main--section">
             <h3 class="main__section--send">¿Por qué elegirnos?</h3>  
             <div class="main__section--bannerSend">
-                <i class="fa-solid fa-chevron-left main__section--arrow"></i>
+               <!--  <i class="fa-solid fa-chevron-left main__section--arrow"></i> -->
                            
                 <article class="main__section--articleSend">
                     <a href="#">
                         <i class="fa-solid fa-truck-fast main__icon--send"></i>
                     </a>
                     <h4>Envíos a todo el país</h4>
-                    <p>Tenés envíos gratis a partir de $10000</p>                   
+                    <p>Envíos gratis a partir de $30000</p>                   
                 </article>
-                <i class="fa-solid fa-chevron-right main__section--arrow"></i>   
+                <!-- <i class="fa-solid fa-chevron-right main__section--arrow"></i>  -->  
                 
             </div>
         </section>
