--- a/public/css/index.css
+++ b/public/css/index.css
@@ -44,7 +44,8 @@
 }
 .banner--slide {
     display: block;
-    width: 54%;
+    width: 51%;
+    height: auto;
     margin: 0 auto;
     box-shadow: 0 0 10px #64646499;
     border-radius: 10px;
