--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,7 +33,10 @@
 }
 
 .header--avatar{
-    width:49px;
+    width: 51px;
+    height: 51px;
+    border-radius: 50%;
+    object-fit: cover;
     margin-top:-18px;
     margin-right: -3px;
 }
