error-search-product

--- a/src/views/products/indexProduct.ejs
+++ b/src/views/products/indexProduct.ejs
@@ -16,7 +16,7 @@
     <%- include('../partials/headerReduce.ejs') %>
     <br>
     <div class="body__div--error404">
-        <h1 style="text-align: center;">--- Producto Inexistente ---</h1>
+        <h1 style="text-align: center;">Producto Inexistente</h1>
         <a href="/admin" class="body--href">volver</a>
     </div>
     <br>
