--- a/src/views/products/productDelete.ejs
+++ b/src/views/products/productDelete.ejs
@@ -41,6 +41,11 @@
                 <label class="control__form--label" for="price" >Precio:</label>
                 <input class="main__input--control"  type="number" id="price" name="price" value="<%=productos.price%>" disabled>
             </div>
+
+            <div class="control--form">
+                <label class="control__form--label" for="discount" >Descuento:</label>
+                <input class="main__input--control"  type="number" id="discount" name="discount" value="<%=productos.discount%>" disabled>
+            </div>
             
                 <label class="control__form--label" for="colores" >Colores:</label>
                 <input class="main__input--control" id="colores" name="colores" value="<%=productos.colores.name%>" disabled>
