--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -46,6 +46,24 @@
             </div>
             <div class="erroresPrice"><ul></ul></div>
             
+
+
+
+        
+
+            <label class="control__form--label"for="discount">Porcentaje Descuento</label>
+            <input type="number" class="main__input--control prices" id="discount" name="discount" value="<%=productos.discount%>">
+            
+
+
+
+
+
+
+
+
+
+
                 <label class="control__form--label" for="colores" >Colores:</label>
                 <select name="colores" id="colores" class="main__input--control">
                     <% for( let i = 0; i <colores.length; i++ ) { %>
