--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,7 +1,8 @@
 <footer class="footer">
+    
     <section class="footer__article"> 
         <h4>Nuestras redes</h4>
-        <p class="footer__section--pNets">Seguinos en nuetras redes sociales:</p>
+        <!-- <p class="footer__section--pNets">Seguinos en nuetras redes sociales:</p> -->
         <div class="footer__section--div">
             <a href="#" class="footer__section--nets">
             <i class="fa-brands fa-instagram"></i>
