--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -29,7 +29,7 @@
             <button class="main__buttons--logins" type="submit" >Iniciar sesión</button>
             
             <div class="main__form--bottom-options">
-                <p><a href="#">¿Olvidaste tu Contraseña?</a></p>
+                <!-- <p><a href="#">¿Olvidaste tu Contraseña?</a></p> -->
                 <p><a href="/users/register">¿No tenés cuenta? Registrate</a></p>
             </div>
         </form>
