--- a/public/css/index.css
+++ b/public/css/index.css
@@ -63,6 +63,7 @@
 .main__section--send{
     font-family: "Roboto", sans-serif;
     text-align: center;
+    border-top: 2px solid #ccc;
     font-size: 24px;
     color:#1D1D1B;
     padding-top: 15px;
@@ -83,22 +84,33 @@
 
 .main__section--articleSend {
     text-align: center;
-    width: 60%;
+    width: 30%;
     margin: 18px auto;
-    border: solid 0.6px rgb(52, 76, 42);
     border-radius: 10px;
-    transition: all 700ms;
+    transition: all 400ms;
 }
+.section--h4{
+    font-size: 19px;
+    font-weight: 600;
+    margin: 15px 0 15px 0;
+    
+}
+.section--p{
+    font-size: 15px;
+    font-weight: 300;
+    margin: 0 0 15px 0;
 
+
+}
 .main__icon--send{
     color:black;
-    font-size: 25px;
+    font-size: 40px;
     margin-top: 10px;
     padding: 7px 6px;
     border-radius: 9%;
     text-align: center;
-    width:40px;
-    height:40px;
+    width:60px;
+    height:60px;
 }
 .main__section--bannerSend{
     display: flex;
@@ -151,6 +163,30 @@
 
 .section__article--precio {
     font-size: 19px;
+    color: black;
+    font-weight: 600;
+    padding: 0 0 0 15px;
+    margin: 0 0 15px 0;
+}
+
+
+.section__article--discount{
+    font-size: 21px;
+    color:#16AE5F;
+    padding: 0 0 0 15px;
+    margin: 0 0 15px 0;
+}
+.section__article--discountNo {
+    font-size: 16px;
+    color:#B9B9B9;
+    text-decoration: line-through;
+    padding: 0 0 0 15px;
+    margin: 0 0 15px 0;
+}
+.section__article--discountYes {
+    font-size: 19px;
+    color:black;
+    font-weight: 450;
     padding: 0 0 0 15px;
     margin: 0 0 15px 0;
 }
@@ -170,14 +206,27 @@
     align-items: flex-start; 
     padding-top: 15px;
 }
+.productRelacionado { 
+    background-color: #ececec;
+    border-radius: 40px; 
+    margin-top: 30px;
+}
+.container--box{
+    width:10rem;
+    height: 9rem; 
+}
 
 /* Media Query */
-@media(min-width:481px) {
+@media(min-width:490px) {
     .main__section--articleSend:hover {
-        background-color: rgb(52, 76, 42, 0.6 );
+        background-color: rgb(129, 159, 84, 0.10 );
     }
     .main__secction--article:hover {
         box-shadow: 0 0 10px rgb(52, 76, 42, 0.6 );
+    }
+    .main__offer{
+        display: flex;
+        width: 100%;
     }
    
 }
@@ -195,6 +244,10 @@
         max-width: 1200px;
         display: flex;
         margin: 0 auto;
+    }
+    .productRelacionado { 
+        max-width: 1200px;
+        margin: 30px auto;
     }
    
 }
