--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,9 +7,11 @@
         <div class="header__div--logo">
             <a href="/"><img  class="header--logo" src="/images/logo.svg" alt="Mates"></a>
         </div>
-        <div class="header__div--cart">
-            <a href="/products/productCart"><i class="fa-solid fa-shopping-cart" style="font-size: 130%;"></i></a>
-        </div>
+        <% if (locals.usuario) { %>
+            <div class="header__div--cart">
+                <a href="/products/productCart"><i class="fa-solid fa-shopping-cart" style="font-size: 130%;"></i></a>
+            </div>
+        <% } %>
     </div>
           
     <nav class="header__nav--menu" id="nav"> 
@@ -19,8 +21,8 @@
                 <li type="none"> <a href="/"> Inicio</a> </li>
                 <li type="none"> <a href="/products/index"> Productos</a> </li>
                 <li type="none"> <a href="#"> Categorías</a> </li>
-                <li type="none"> <a href="#"> Ofertas</a> </li>
-                <li type="none" class="visibleline">-------------------</a> </li>
+                <li type="none"> <a href="/products/offer"> Ofertas</a> </li>
+                <li type="none" class="visibleline">----------------</a> </li>
             </ul> 
         </nav>
 
@@ -42,8 +44,9 @@
                         <% } %>
                         
                         <li type="none"> <a href="/users/logout"> Cerrar sesión&ensp; <i class="fas fa-sign-out-alt"></i> </a> </li>
+                        <li type="none"> <a href="/products/productCart"> <i style="margin: 0 auto; font-size: 120%;" class="fa-solid fa-shopping-cart visibleCart"></i> </a> </li> 
                 <% } %>
-                <li type="none"> <a href="/products/productCart"> <i style="margin: 0 auto; font-size: 120%;" class="fa-solid fa-shopping-cart visibleCart"></i> </a> </li> 
+                
             </ul>
         </nav> 
     </nav>
