--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -45,24 +45,15 @@
                 <input type="number" class="main__input--control prices"  id="price" name="price" value="<%=productos.price%>" placeholder="Precio">
             </div>
             <div class="erroresPrice"><ul></ul></div>
-            
 
+            <div style="display: flex;">
+                <label class="control__form--label"for="discount">Porcentaje Descuento</label>
+                <input type="number" class="main__input--control prices" id="discount" name="discount" value="<%=productos.discount%>">
+                
 
-
-        
-
-            <label class="control__form--label"for="discount">Porcentaje Descuento</label>
-            <input type="number" class="main__input--control prices" id="discount" name="discount" value="<%=productos.discount%>">
-            
-
-
-
-
-
-
-
-
-
+                <label class="control__form--label"for="discountPrice">Precio Descuento</label>
+                <input type="number" class="main__input--control prices" id="discountPrice" name="discountPrice" value="<%=productos.discount_price %>" disabled>
+            </div>
 
                 <label class="control__form--label" for="colores" >Colores:</label>
                 <select name="colores" id="colores" class="main__input--control">
