--- a/src/views/products/productOffer.ejs
+++ b/src/views/products/productOffer.ejs
@@ -10,11 +10,12 @@
 </head>
 
 <body>
+
     <%- include('../partials/header.ejs') %>
     
     <main class="main--form">
-        <!-- Todos los productos -->
-		<h3 class="main__products--titulares">Todos los productos</h3>
+        <!-- Productos con oferta -->
+		<h3 class="main__products--titulares">Ofertas imperdibles</h3>
 
 		<div class="main--div">
 			<% productos.forEach ((product)=>{ %>
@@ -25,21 +26,15 @@
 							<img class="image__product" id="images" name="images" src="/images/<%= product.producto[i].name %>" alt="<%=product.producto[i].name%>">
 							<% } %>
 					</figure>
-
 					<p class="product-box_data"><%=product.name %></p>
-					
 					<div class="article__div--flex">
+
 						<div class="main__offer">
-							<% if (product.discount > 0) { %>
-								<p class="section__article--discount"> <%=product.discount%>% OFF</p>
-								<p class="section__article--discountNo"> $<%=product.price%> </p>
-								<p class="section__article--discountYes"> $<%=product.discount_price%> </p>
-							<% } else { %>
-								<p class="section__article--discountYes"> $<%=product.discount_price%> </p>
-							<% }%>
+							<p class="section__article--discount"> <%=product.discount%>% OFF</p>
+							<p class="section__article--discountNo"> $<%=product.price%> </p>
+							<p class="section__article--discountYes"> $<%=product.discount_price %> </p>
 						</div>
 					</div>
-
 				</a>
 				</section>
 			<% }) %>
